--- a/roles/db-create/tasks/main.yml
+++ b/roles/db-create/tasks/main.yml
@@ -94,8 +94,7 @@
     dest: "{{ pwgen_path }}/{{ pwgen_file }}"
     owner: root
     mode: u=rwx,go=rx
-  when:
-    - db_password_secret | length == 0
+  when: db_password_secret | length == 0
   tags: db-create
 
 - name: Generate command for password randomization (not 11.2)
@@ -109,7 +108,7 @@
 - name: Generate command for password randomization (11.2 only)
   set_fact:
     pwd_gen_cmd: echo -e "$({{ pass_param }})\n$({{ pass_param }})"
-  when: 
+  when:
     - oracle_ver == "11.2.0.4.0"
     - db_password_secret | length == 0
   tags: db-create
@@ -117,8 +116,7 @@
 - name: Generate command for retrieving passwords from Secret Manager
   set_fact:
     pwd_gen_cmd: password=$(gcloud --quiet secrets versions access {{ db_password_secret }}); echo -e "$password\n$password"
-  when:
-    - db_password_secret | length > 0
+  when: db_password_secret | length > 0
   tags: db-create
 
 - name: Create database using DBCA
@@ -143,13 +141,14 @@
       register: dbcalog
     - debug:
         msg: "{{ dbcalog['content'] | b64decode }}"
+        verbosity: 0
 
 - name: DBCA output
   debug:
     msg:
       - "{{ dbca_output.cmd }}"
       - "{{ dbca_output.stdout_lines }}"
-      # verbosity: 1
+    verbosity: 0
   when:
     - pmon_proc.stdout == "0"
     - check_oratab.stdout == "0"
