--- a/roles/ora-host/tasks/validate_passwords.yml
+++ b/roles/ora-host/tasks/validate_passwords.yml
@@ -16,7 +16,7 @@
 - name: Fetch workload-agent's user password
   command: gcloud --quiet secrets versions access {{ oracle_metrics_secret }}
   register: agent_pass_result
-  changed_when: false 
+  changed_when: false
   failed_when: false # the command's exit code is checked in a separate task to show a clear error message.
   no_log: true # avoids leaking sensitive values in logs.
   when:
@@ -27,7 +27,7 @@
 - name: Fail if gcloud command failed
   fail:
     msg: "Command failed with rc={{ agent_pass_result.rc }}: stderr={{ agent_pass_result.stderr }}"
-  when: 
+  when:
     # Skip this task if the fetch task was skipped.
     # agent_pass_result.skipped will be true if the fetch task didn't run due to 'when:' conditions.
     # We use default(false) in case 'skipped' is not set (e.g. if the task ran successfully).
@@ -50,8 +50,7 @@
   changed_when: false
   failed_when: false # the command's exit code is checked in a separate task to show a clear error message.
   no_log: true
-  when:
-    - db_password_secret | length > 0
+  when: db_password_secret | length > 0
   tags: validate-db-passwords
 
 - name: Fail if gcloud command failed
