--- a/install-sw.yml
+++ b/install-sw.yml
@@ -38,7 +38,7 @@
   roles:
     - role: gi-setup
       when:
-        - install_gi|bool
+        - install_gi | bool
         - cluster_type in ("NONE", "DG")
   tags: gi-setup
 
@@ -49,7 +49,7 @@
   roles:
     - role: rdbms-setup
       when:
-        - install_rdbms|bool
+        - install_rdbms | bool
         - cluster_type in ("NONE", "DG")
   tags: rdbms-setup
 
@@ -61,8 +61,7 @@
     - name: rac-gi-install | open firewall
       include_role:
         name: rac-lsnr-firewall
-      when:
-        - cluster_type == "RAC"
+      when: cluster_type == "RAC"
   tags: lsnr-firewall
 
 - hosts: dbasm
@@ -78,8 +77,7 @@
         ssh_user: "{{ grid_user }}"
         user_group: "{{ oracle_group }}"
         ssh_nodes: "{{ groups['dbasm'] }}"
-      when:
-        - cluster_type == "RAC"
+      when: cluster_type == "RAC"
   tags: rac-gi,ssh-keys
 
 - hosts: dbasm[0]
@@ -101,8 +99,7 @@
         - "{{ gi_software | default([]) | json_query('[?version==`' + oracle_ver + '`].files[*].name') | join() }}"
       loop_control:
         loop_var: osw_files
-      when:
-        - cluster_type == "RAC"
+      when: cluster_type == "RAC"
   tags: rac-gi
 
 - hosts: dbasm
@@ -118,8 +115,7 @@
         ssh_user: "{{ oracle_user }}"
         user_group: "{{ oracle_group }}"
         ssh_nodes: "{{ groups['dbasm'] }}"
-      when:
-        - cluster_type == "RAC"
+      when: cluster_type == "RAC"
   tags: rac-db,ssh-keys
 
 - hosts: dbasm[0]
@@ -140,8 +136,7 @@
         - "{{ rdbms_software | json_query('[?version==`' + oracle_ver + '`].files[*].name') | join() }}"
       loop_control:
         loop_var: osw_files
-      when:
-        - cluster_type == "RAC"
+      when: cluster_type == "RAC"
   tags: rac-db
 
 - hosts: dbasm
@@ -150,7 +145,7 @@
         name: patch-vulns
         tasks_from: main
   tags: patch-vulns
-  
+
 - hosts: dbasm
   remote_user: "{{ oracle_user }}"
   become: true
