--- a/roles/db-create/tasks/rac-db-create.yml
+++ b/roles/db-create/tasks/rac-db-create.yml
@@ -131,10 +131,12 @@
       register: dbcalog
     - debug:
         msg: "{{ dbcalog['content'] | b64decode }}"
+        verbosity: 0
 
 - name: rac-db-create | DBCA output
   debug:
     msg: "{{ dbca_output | default('') }}"
+    verbosity: 0
   tags: rac-db-create
 
 - name: rac-db-create | Save PDBs state
@@ -253,6 +255,7 @@
     - name: rac-db-create | Show datapatch results
       debug:
         var: datapatch_output.stdout_lines
+        verbosity: 0
       when: oracle_ver != '11.2.0.4.0'
 
     - name: rac-db-create | Set cluster_database to true
