--- a/roles/patch/tasks/rac-dbpatch.yml
+++ b/roles/patch/tasks/rac-dbpatch.yml
@@ -96,6 +96,7 @@
 - name: rac-dbpatch | Datapatch results
   debug:
     var: datapatch_output.stdout_lines
+    verbosity: 0
   when: oracle_ver != '11.2.0.4.0'
   tags: patch_rdbms,datapatch
 
@@ -119,6 +120,7 @@
 - name: rac-dbpatch | Catbundle results
   debug:
     var: catbundle_output
+    verbosity: 0
   when: oracle_ver == '11.2.0.4.0'
   tags: patch_rdbms,catbundle
 
@@ -158,6 +160,7 @@
 - name: rac-dbpatch | Registry patch results
   debug:
     var: patch_registry.stdout_lines
+    verbosity: 0
   when: oracle_ver != '11.2.0.4.0'
 
 - name: rac-dbpatch | Set cluster_database to true
@@ -215,8 +218,7 @@
     ORACLE_SID: "{{ oracle_sid }}"
     ORACLE_HOME: "{{ oracle_home }}"
     PATH: "{{ oracle_home }}/bin:/usr/local/bin:/bin:/usr/bin:/usr/local/sbin:/usr/sbin"
-  when:
-    - oracle_ver != '11.2.0.4.0'
+  when: oracle_ver != '11.2.0.4.0'
   register: datapatch_output2
   ignore_errors: true
   become: true
@@ -226,6 +228,7 @@
 - name: rac-dbpatch | Datapatch results for second time
   debug:
     var: datapatch_output2.stdout_lines
+    verbosity: 0
   when: oracle_ver != '11.2.0.4.0'
   tags: patch_rdbms,datapatch
 
